# wardrobe-insights

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wardrobe_insights/: __init__.py  analytics.py  cli.py  db.py  schema.sql
tests/: test_analytics.py
